        Support for WHEN SQLSTATE error handlers in PSQL
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Improvement CORE-3226
        IPv6 support
      Contributor(s):
        Michal Kubeček <mike at mk-sys.cz>

    * Improvement CORE-733
        Compress data over the network
      Contributor(s):
        Alex Peshkov <peshkoff at mail.ru>

    * New feature CORE-4717
        Aggregate statistical functions COVAR_SAMP, COVAR_POP and CORR
      See also:
        /doc/sql.extensions/README.statistical_functions.txt
      Contributor(s):
        Hajime Nakagami <nakagami at gmail.com>
        Adriano dos Santos Fernandes <adrianosf at gmail.com>

    * New feature CORE-4714
        Aggregate statistical functions STDDEV_POP, STDDEV_SAMP, VAR_POP and VAR_SAMP
      See also:
        /doc/sql.extensions/README.statistical_functions.txt
      Contributor(s):
        Hajime Nakagami <nakagami at gmail.com>
        Adriano dos Santos Fernandes <adrianosf at gmail.com>

    * New feature CORE-4707
        Ability to validate tables and indices online (without exclusive access to the database)
      Contributor(s):
        Vlad Khorsun <hvlad at users.sf.net>

    * New feature CORE-4526
        Support SQL-2008 compliant OFFSET/FETCH clauses instead of FIRST/SKIP or ROWS/TO clauses
      Contributor(s):
        Mark Rotteveel <mark at lawinegevaar.nl>

    * New feature CORE-4438
        Add support for UPDATE OR INSERT statement to Embedded SQL
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * New feature CORE-4437
        Add support for the RETURNING clause to Embedded SQL
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * New feature CORE-803
        Server bi-directional (aka scrollable) cursors
      See also:
        /doc/sql.extensions/README.scrollable_cursors.txt
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>


  *************
  * v3.0 Beta 1