@@ -333,6 +333,15 @@ static const TOK tokens[] =
 	{RECREATE, "RECREATE", 2, false},
 	{RECURSIVE, "RECURSIVE", 2, false},
 	{REFERENCES, "REFERENCES", 1, false},
+	{REGR_AVGX, "REGR_AVGX", 2, false},
+	{REGR_AVGY, "REGR_AVGY", 2, false},
+	{REGR_COUNT, "REGR_COUNT", 2, false},
+	{REGR_INTERCEPT, "REGR_INTERCEPT", 2, false},
+	{REGR_R2, "REGR_R2", 2, false},
+	{REGR_SLOPE, "REGR_SLOPE", 2, false},
+	{REGR_SXX, "REGR_SXX", 2, false},
+	{REGR_SXY, "REGR_SXY", 2, false},
+	{REGR_SYY, "REGR_SYY", 2, false},
 	{KW_RELATIVE, "RELATIVE", 2, true},
 	{RELEASE, "RELEASE", 2, false},
 	{REPLACE, "REPLACE", 2, false},
